<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/telegram"
        android:icon="@drawable/telegram"
        app:showAsAction="always"
        android:title="@string/telegram"/>

    <item
        android:id="@+id/linkedin"
        android:icon="@drawable/linkedin"
        app:showAsAction="always"
        android:title="@string/linkedin"/>

    <item
        android:id="@+id/whatsap"
        app:showAsAction="never|withText"
        android:title="@string/whatsapp"/>

    <item
        android:id="@+id/gmail"
        app:showAsAction="never"
        android:title="@string/gmail"/>

    <item
        android:id="@+id/logout"
        app:showAsAction="never"
        android:title="@string/log_out"/>
</menu>
